examples/test/testpolicy19649.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19649
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key35: value48
      key1: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value47
          key5: value10
      podSelector:
        matchLabels:
          key19: value28
          key3: value41
          key46: value23
